@@ -19,6 +19,41 @@ while (<DATA>) {}
 for (;<$fh>;) {}
 for (;<DATA>;) {}
 
+## name DefaultAssignmentReadline
+## failures 8
+## cut
+
+while (readline $fh) {}
+while (readline($fh)) {}
+while (readline DATA) {}
+while (readline(DATA)) {}
+1 while readline $fh;
+1 while readline($fh);
+1 while readline DATA;
+1 while readline(DATA);
+
+## name DefaultAssignmentReaddir
+## failures 8
+## cut
+
+while (readdir $dh) {}
+while (readdir($dh)) {}
+while (readdir DIR) {}
+while (readdir(DIR)) {}
+1 while readdir $dh;
+1 while readdir($dh);
+1 while readdir DIR;
+1 while readdir(DIR);
+
+## name DefaultAssignmentEach
+## failures 4
+## cut
+
+while (each %hash) {}
+while (each(%hash)) {}
+1 while each %hash;
+1 while each(%hash);
+
 ## name ExplicitAssignment
 ## failures 0
 ## cut
@@ -29,3 +64,15 @@ for (;my $line = <$fh>;) {}
 while (my $line = <DATA>) {}
 for (;my $line = <DATA>;) {}
 1 while $line = <DATA>;
+while (my $line = readline $fh) {}
+while (my $line = readline($fh)) {}
+1 while $line = readline $fh;
+1 while $line = readline($fh);
+while (my $dir = readdir $dh) {}
+while (my $dir = readdir($dh)) {}
+1 while $dir = readdir $dh;
+1 while $dir = readdir($dh);
+while (my $key = each %hash) {}
+while (my $key = each(%hash)) {}
+1 while $key = each %hash;
+1 while $key = each(%hash);
